[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gitpython>=3.1.46",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "pylatexenc>=2.10",
    "sentence-transformers>=5.3.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
